--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,4 @@
+@import "./Colors.css";
 .App {
   text-align: center;
 }
@@ -7,8 +8,14 @@
   pointer-events: none;
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
 .App-header {
-  background-color: #282c34;
+  background-color: #5b6477;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,3 +29,11 @@
   color: #61dafb;
 }
 
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
