--- a/src/styles/PianoKeyboard.css
+++ b/src/styles/PianoKeyboard.css
@@ -1,3 +1,14 @@
+.piano-keyboard-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ffffff;
+  border-radius: 0px;
+  box-sizing: border-box;
+}
+
 .piano-keyboard {
   display: flex;
   position: relative;
