--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -3,6 +3,8 @@
   --key-black-bg: #000000;
   --key-white-selected-bg: #4a01e9;
   --key-black-selected-bg: #4a01e9;
+  --key-white-selected2: #7811b4; /*selected on 2nd octave*/
+  --key-black-selected2: #7811b4; /*selected on 2nd octave*/
   --key-border: #cccccc;
   --note-text-on-white: #000000;
   --note-text-on-black: #ffffff;
