--- a/src/styles/ModeSelector.css
+++ b/src/styles/ModeSelector.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   gap: 10px;
   justify-content: center;
-  margin-bottom: 20px;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .mode-selector button {
-  width: 100%;
+  width: 60%;
   padding: 15px 10px;
-  font-size: 16px;
+  font-size: 12px;
   border: 2px solid #ccc;
   border-radius: 5px;
   background-color: #f0f0f0;
@@ -18,7 +19,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 60px;
+  min-height: 30px;
   text-align: center;
 }
 
