--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -23,6 +23,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow: auto;
 }
 
 .App-link {
@@ -48,7 +49,7 @@
 
 .grid-layout {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 175px 175px 1fr 1fr;
   grid-template-rows: auto 1fr 1fr;
   gap: 10px;
   width: 1000px;
@@ -93,7 +94,6 @@
   grid-column: 4;
   grid-row: 3;
 }
-
 
 select {
   font-size: 16px;
