--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -1,10 +1,10 @@
-.chromatic-circle {
+.keyboardcircular {
   width: 400px;
   height: 400px;
   cursor: pointer;
 }
 
-.chromatic-circle canvas {
+.keyboardcircular canvas {
   width: 100%;
   height: 100%;
 }
