--- a/src/styles/KeyboardLinear.css
+++ b/src/styles/KeyboardLinear.css
@@ -1,4 +1,4 @@
-.piano-keyboard-container {
+.keyboardlinear-container {
   width: 100%;
   height: 100%;
   display: flex;
@@ -9,7 +9,7 @@
   box-sizing: border-box;
 }
 
-.piano-keyboard {
+.keyboardlinear {
   display: flex;
   position: relative;
   height: 200px;
