--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -15,3 +15,33 @@
   text-anchor: middle;
   /*dominant-baseline: middle;*/
 }
+
+.keyboardcircular-container {
+  position: relative;
+  width: 400px;
+  height: 400px;
+}
+
+.drawing-mode-select {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 12px;
+  padding: 2px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  width: 70px; /* Reduce the width */
+  appearance: none; /* Remove default appearance */
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="12" height="6"><path d="M0 0h12L6 6z" fill="%23333"/></svg>');
+  background-repeat: no-repeat;
+  background-position: right 4px center;
+  padding-right: 16px; /* Make room for custom arrow */
+}
+
+/* Style for dropdown options */
+.drawing-mode-select option {
+  font-size: 12px;
+}
