--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,12 +49,14 @@
 
 .grid-layout {
   display: grid;
-  grid-template-columns: 175px 175px 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: auto 1fr 1fr;
   gap: 10px;
-  width: 1000px;
+  width: 100%;
+  max-width: 1000px;
   height: 600px;
   box-sizing: border-box;
+  margin: 0 auto;
 }
 
 .grid-layout > * {
@@ -68,13 +70,17 @@
 .keyboardlinear-container {
   grid-column: 1 / -1; /* Span all columns */
   grid-row: 1;
-  width: 100vw;
-  margin-left: calc(-50vw + 50%);
+  width: 100%;
 }
 
 .keyboardcircular-container {
-  grid-column: 1/3;
-  grid-row: 2/4;
+  grid-column: 1 / 3; /* Span first two columns */
+  grid-row: 2 / 4; /* Span second and third rows */
+  justify-self: start; /* Align to the left */
+  align-self: start; /* Align to the top */
+  width: 100%; /* Take full width of its grid area */
+  max-width: 400px; /* Or any other maximum size you prefer */
+  height: auto; /* Allow height to be determined by aspect ratio */
 }
 
 .notes-renderer-container {
