--- a/src/styles/KeyboardCircular.css
+++ b/src/styles/KeyboardCircular.css
@@ -1,6 +1,9 @@
 .keyboardcircular {
-  width: 400px;
-  height: 400px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
 }
 
@@ -18,8 +21,13 @@
 
 .keyboardcircular-container {
   position: relative;
-  width: 400px;
-  height: 400px;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
+  max-width: 400px; /* Or any other maximum size you prefer */
+  max-height: 400px;
+  overflow: hidden; /* Prevent content from spilling out */
+  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
 }
 
 .drawing-mode-select {
