--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,9 +49,8 @@
 
 .grid-layout {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: auto 1fr 1fr;
-  gap: 10px;
   width: 100%;
   max-width: 1000px;
   height: 600px;
