--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -77,10 +77,16 @@
   grid-row: 2 / 4; /* Span second and third rows */
   justify-self: start; /* Align to the left */
   align-self: start; /* Align to the top */
-  width: 100%; /* Take full width of its grid area */
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
   max-width: 400px; /* Or any other maximum size you prefer */
-  height: auto; /* Allow height to be determined by aspect ratio */
+  max-height: 400px;
+  overflow: hidden; /* Prevent content from spilling out */
+  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
 }
+
 
 .mode-selector-container {
   grid-column: 3;
