--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -69,7 +69,18 @@
 .keyboardlinear-container {
   grid-column: 1 / -1; /* Span all columns */
   grid-row: 1;
-  width: 100%;
+  width: 100vw;
+  max-width: 500px; 
+  height: calc(100vw * var(--h2wratio)); /* Adjust the multiplier to change the aspect ratio */
+  max-height: calc(500px * var(--h2wratio)); /* Set the maximum height based on the max width */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ffffff;
+  border-radius: 0px;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: 0 auto; /* Center the container horizontally */
 }
 
 .keyboardcircular-container {
