--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -69,7 +69,18 @@
 .keyboardlinear-container {
   grid-column: 1 / -1; /* Span all columns */
   grid-row: 1;
-  width: 100%;
+  width: 100vw;
+  max-width: 500px; 
+  height: calc(100vw * var(--h2wratio)); /* Adjust the multiplier to change the aspect ratio */
+  max-height: calc(500px * var(--h2wratio)); /* Set the maximum height based on the max width */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #ffffff;
+  border-radius: 0px;
+  box-sizing: border-box;
+  overflow: hidden;
+  margin: 0 auto; /* Center the container horizontally */
 }
 
 .keyboardcircular-container {
@@ -77,10 +88,16 @@
   grid-row: 2 / 4; /* Span second and third rows */
   justify-self: start; /* Align to the left */
   align-self: start; /* Align to the top */
-  width: 100%; /* Take full width of its grid area */
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
   max-width: 400px; /* Or any other maximum size you prefer */
-  height: auto; /* Allow height to be determined by aspect ratio */
+  max-height: 400px;
+  overflow: hidden; /* Prevent content from spilling out */
+  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
 }
+
 
 .mode-selector-container {
   grid-column: 3;
