--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -84,11 +84,26 @@
 }
 
 .keyboardcircular-container {
-  grid-column: 1 / 3; /* Span first two columns */
-  grid-row: 2 / 4; /* Span second and third rows */
+  /*grid-column: 1 / 3; /* Span first two columns */
+  /*grid-row: 2 / 4; /* Span second and third rows */
   justify-self: start; /* Align to the left */
   align-self: start; /* Align to the top */
   position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
+  max-width: 400px; /* Or any other maximum size you prefer */
+  max-height: 400px;
+  overflow: hidden; /* Prevent content from spilling out */
+  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
+}
+
+.keyboardpieslice-container {
+  grid-column: 1 / 3; /* Span first two columns */
+  grid-row: 2 / 4; /* Span second and third rows */
+  justify-self: start; /* Align to the left */
+  /*align-self: start; /* Align to the top */
+  /*position: relative; *
   width: 100%;
   height: 0;
   padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
