--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,16 +14,10 @@ body {
   gap: 20px;
 }
 
-.keyboardcircular-container {
-  justify-self: start; /* Align to the left */
-  align-self: start; /* Align to the top */
-  position: relative;
+.keyboardlinear-container {
   width: 100%;
-  height: 0;
-  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
-  max-width: 400px; /* Or any other maximum size you prefer */
-  overflow: hidden; /* Prevent content from spilling out */
-  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .keyboardpieslice-container {
@@ -74,4 +68,15 @@ select option {
   }
 }
 
-
+/*replaced by keyboardpieslice*/
+.keyboardcircular-container {
+  justify-self: start; /* Align to the left */
+  align-self: start; /* Align to the top */
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 100%; /* This creates a 1:1 aspect ratio */
+  max-width: 400px; /* Or any other maximum size you prefer */
+  overflow: hidden; /* Prevent content from spilling out */
+  aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
+}
