--- a/src/styles/ChordNameDisplay.css
+++ b/src/styles/ChordNameDisplay.css
@@ -1,7 +1,16 @@
 .chord-display {
   display: flex;
   flex-direction: column;
-  margin-top: -10px;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+}
+
+.chord-name-description,
+.chord-name-value,
+.chord-notes {
+  text-align: center;
+  width: 100%;
 }
 
 .chord-name-description {
@@ -27,4 +36,5 @@
   border: 2px solid white;
   border-radius: 5px;
   padding: 0;
+  margin-top: 10px;
 }
