--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -92,3 +92,19 @@ select option {
   overflow: hidden; /* Prevent content from spilling out */
   aspect-ratio: 1 / 1; /* Ensure a square aspect ratio for modern browsers */
 }
+
+.chord-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 5px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.interval-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5px;
+    margin-bottom: 10px;
+    width: 100%;
+}
