--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     padding: 0 10px; /* Add some padding on the sides */
     margin: 0 auto;
+    border: 1px solid var(--border-color);  /* Add border to the mode selector container */
 }
 
 h3 {
@@ -79,9 +80,10 @@ h3 {
     gap: 5px;
     align-items: center;
     margin-top: 5px;
+    margin-left: 20%;
     width: 70%;
     max-width: var(--buttons-container-max-width);
-    justify-content: center;
+    justify-content: center; 
 }
 
 .inversion-buttons button {
