border logic for debugging

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -13,7 +13,7 @@ body {
   --keyboardcircular-max-height: 200px;
   --buttons-container-max-width: 300px;
   --buttons-max-width: 200px;
-  --border-color:  grey;
+  --border-color:  yellow;
 }
 
 .App {
