--- a/src/styles/KeyboardPieSlice.css
+++ b/src/styles/KeyboardPieSlice.css
@@ -1,7 +1,9 @@
 .keyboardpieslice-container {
   position: relative;
   width: 100%;
-  height: 100%;
+  aspect-ratio: 1 / 1;
+  max-width: var(--keyboardcircular-max-width);
+  margin: 0 auto;
 }
 
 .keyboardpieslice-overlay {
@@ -29,10 +31,8 @@
 }
 
 .keyboard-pieslice {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
 }
 
 .pie-slice-key {
