--- a/src/styles/PresetsSelector.css
+++ b/src/styles/PresetsSelector.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     padding: 0 10px; /* Add some padding on the sides */
     margin: 0 auto;
+    margin-top: 20px;
     border: 1px solid var(--border-color);  /* Add border to the mode selector container */
 }
 
@@ -16,7 +17,19 @@ h3 {
     text-align: center;
 }
 
-.chord-grid,
+.chord-grid {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 5px;
+    margin-bottom: 10px;
+    width: 100%;
+}
+
+.chord-grid button {
+    flex: 1 1 calc(25% - 10px); /* Ensure no more than 4 elements in a row */
+}
+
 .interval-grid {
     display: flex;
     flex-wrap: wrap;
